syntax = "proto3";

package messages;
import "google/protobuf/timestamp.proto";
import "routing.proto";
option java_package = "cl.vc.module.protocolbuff.mkd";
option java_outer_classname = "MarketDataMessage";


enum TypeBook {
	ASK = 0;
	BID = 1;
}

enum ActionIncremental {
	UNKNOWN_ACT = 0;
	ADD_DATA_POSITIONS = 1;
	UPDATE_DATA_POSITIONS = 2;
	DELETE_DATA_POSITIONS = 3;
}


enum SecurityExchangeMarketData {
	BCS = 0;
	BVC = 1;
	BVL = 2;
	NYSE = 3;
	AMEX = 4;
	NASDAQ = 5;
	DATATEC_XBCL = 6;
	DATATEC_XBOG = 7;
	FH_BBG = 8;
	FH_IBKR = 9;
	BINANCE_MKD = 10;
	MEXC_MKD = 11;
	ALPACA_MKD = 12;
	CRYPTO_MARKET_MKD = 13;
	BUDA_MKD = 14;
	ORIONX_MKD = 15;
}

enum Depth {
	FULL_BOOK = 0;
	TOP_OF_THE_BOOK = 1;
}

message News {
	string texto = 1;
	string lineoftext = 2;
	SecurityExchangeMarketData securityExchange = 3;
}

message SnapshotNews {
	repeated News news = 1;
}

message Subscribe {
	string symbol = 1;
	string id = 2;
	SettlType settlType = 3;
	SecurityType securityType = 4;
	bool trade = 5;
	bool statistic = 6;
	bool book = 9;
	Depth depth = 7;
	SecurityExchangeMarketData securityExchange = 8;  //security Exchange
}

message Security {
	string symbol = 1;  // symbol
	string securityType = 2;  // security type
	SecurityExchangeMarketData securityExchange = 3;  //security Exchange
	string currency = 4;  // currency
	string text = 5;  //text
}

message SecurityList {
	string id = 1;  // id
	repeated Security listSecurities = 2;
	SecurityExchangeMarketData securityExchange = 3;
}

message SecurityListRequest {
	string id = 1;  // id
}

message Unsubscribe {
	string id = 1;  // id
}

message Snapshot {
	repeated DataBook asks = 1;
	repeated DataBook bids = 2;
	repeated Trade trades = 3;
	Statistic statistic = 4;
	string id = 6;
	SecurityExchangeMarketData securityExchange = 7;
	string symbol = 8;
	SettlType settlType = 9;
	SecurityType securityType = 11;
}

message Trade {
	google.protobuf.Timestamp t = 1;
	double price = 2;
	double qty = 3;
	double amount = 4;
	string buyer = 5;
	string seller = 6;
	string id = 7;
	string symbol = 8;
	SettlType settlType = 9;
	SecurityExchangeMarketData securityExchange = 10;
	SecurityType securityType = 11;
}

message Incremental {
	DataBook data = 1;
	ActionIncremental actionIncremental = 2;
	TypeBook type = 3;
	string id = 4;
	int32 position = 5;
	SecurityExchangeMarketData securityExchange = 6;
	string symbol = 7;
	SettlType settlType = 8;
	SecurityType securityType = 10;
}

message IncrementalBook {
	string id = 4;
	string symbol = 7;
	SettlType settlType = 8;
	SecurityExchangeMarketData securityExchange = 6;
	SecurityType securityType = 10;
	repeated DataBook asks = 1;
	repeated DataBook bids = 2;
}

message Rejected {
	string reason = 1;
	string text = 2;
	string id = 3;
}

message DataBook {
	double price = 1;
	double size = 2;
	TypeBook typeBook = 3;
	string symbol = 4;
	SecurityExchangeMarketData securityExchange = 5;
}

message Ohlcv {
	double close = 1;
	double open = 2;
	double low = 3;
	double high = 4;
	double volume = 5;
	string id = 6;
	string symbol = 7;
	SettlType settlType = 8;
	SecurityExchangeMarketData securityExchange = 9;
	SecurityType securityType = 10;
	google.protobuf.Timestamp t = 11;
}

message Statistic {
	double amount = 1;
	double vwap = 2;
	double imbalance = 3;
	string ratio = 4;
	string id = 5;
	double tradeVolume = 6;
	double delta = 7;
	double previusClose = 8;
	double referencialPrice = 9;
	double indicativeOpening = 10;
	double last = 11;
	double tickDirecion = 12;
	SecurityExchangeMarketData securityExchange = 13;
	string symbol = 14;
	Ohlcv ohlcv = 15;
	double bidPx = 20;
	double bidQty = 17;
	double askPx = 18;
	double askQty = 19;

	double amountTheoric = 25;
	double priceTheoric = 26;
	double desbalTheoric = 27;
	double ownDemand = 28;
	double totalDeamnd = 29;


	double totalDemand = 31;
	SettlType settlType = 32;
	SecurityType securityType = 44;

}
